--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "embla-carousel-react": "^8.0.0-rc22",
+    "dotenv": "^16.4.2",
+    "flask": "^0.2.10",
     "framer-motion": "^11.0.3",
     "lucide-react": "^0.323.0",
+    "reach": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
