--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "dotenv": "^16.4.2",
+    "embla-carousel-react": "^8.0.0-rc22",
     "flask": "^0.2.10",
     "framer-motion": "^11.0.3",
     "lucide-react": "^0.323.0",
